--- a/config
+++ b/config
@@ -193,3 +193,6 @@ bindsym $mod+shift+x exec i3lock
 #display brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%-
+
+#wallpaper
+exec always feh --bg-scale /home/liam/Documents/wallpapers/current.jpg
